--- a/features.html
+++ b/features.html
@@ -96,9 +96,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 me-auto">
-            <h2 class="mb-4">The Need(NEED STATEMENT)</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio, laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt dolore mollitia esse natus beatae.</p>
-            <p><a href="#">Read More</a></p>
+            <h2 class="mb-4">About</h2>
+            <p class="mb-4">As people are forced to physically distance themselves from each other, mental health deteriorates from social isolation. Project HP helps facilitate interactions for those who are struggling with loneliness in a low stakes, gamified environment.</p>
+            <p><a href="https://www.cdc.gov/mentalhealth/stress-coping/cope-with-stress/index.html">Coping With Stresse</a></p>
           </div>
           <div class="col-md-6" data-aos="fade-left">
             <img src="assets/img/undraw_svg_2.svg" alt="Image" class="img-fluid">
@@ -106,7 +106,7 @@
         </div>
       </div>
     </section>
-
+<!--
     <section class="section">
       <div class="container">
         <div class="row align-items-center">
@@ -136,14 +136,26 @@
         </div>
       </div>
     </section>
+-->
 
     <section class="section">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 ms-auto order-2">
-            <h2 class="mb-4">MENTAL HEALTH RESOURCE </h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio, laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt dolore mollitia esse natus beatae.</p>
-            <p><a href="#">Read More</a></p>
+            <h2 class="mb-4">MENTAL HEALTH RESOURCES</h2>
+            <p class="mb-4">
+              <ul>
+                  <li><a href="https://www.nimh.nih.gov/health/find-help" target = "blank">National Institute of Mental Health</a>:
+                    If you or someone you know has a mental illness, is struggling emotionally, or has <a href="https://www.nimh.nih.gov/health/publications/my-mental-health-do-i-need-help" target = "blank">concerns about their mental health</a>, there are ways to get help. Use these resources to find help for you, a friend, or a family member.
+                  </li>
+                  <li><a href="https://www.cdc.gov/mentalhealth/tools-resources/individuals/index.htm" target = "blank">Centers for Disease Control and Prevention</a>:
+                    The CDC recommends these free and confidential resources below to help you or a loved one connect with a skilled, trained mental health professional.
+                  </li>
+                  <li><a href=" https://findtreatment.samhsa.gov" target = "blank">Substance Abuse and Mental Health Services Administration</a>:
+                    Behavioral Health Treatment Services Locator is a confidential and anonymous source of information for persons seeking treatment facilities in the United States or U.S. Territories for substance use/addiction and/or mental health problems.
+                  </li>
+              </ul>
+            </p>
           </div>
           <div class="col-md-6" data-aos="fade-right">
             <img src="assets/img/undraw_svg_4.svg" alt="Image" class="img-fluid">
@@ -152,7 +164,7 @@
       </div>
     </section>
 
-    
+
 
 
 
