--- a/pricing.html
+++ b/pricing.html
@@ -81,8 +81,9 @@
           <div class="col-12">
             <div class="row justify-content-center">
               <div class="col-md-7 text-center hero-text">
-                <h1 data-aos="fade-up" data-aos-delay="">Meet Our NAME Bot</h1>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h1 data-aos="fade-up" data-aos-delay="">Meet Project HP Bot</h1>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Connecting groups and interests through gamified social interaction.
+                </p>
               </div>
             </div>
           </div>
@@ -96,8 +97,9 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7 mb-5">
-            <h2 class="section-heading">NAME OF THE BOT</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere illum obcaecati inventore velit laborum earum.</p>
+            <h2 class="section-heading">Project HP Bot</h2>
+            <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data. 
+            </p>
           </div>
         </div>
         <div class="row align-items-stretch">
