--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active " href="index.html">Home</a></li>
-          <li><a class="active " href="features.html">About Us</a></li>
+          <li><a class="active " href="features.html">About</a></li>
           <li><a href="pricing.html">Bot Info</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Server Info</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
