--- a/Contact Us.html
+++ b/Contact Us.html
@@ -51,7 +51,7 @@
           <li><a class="" href="index.html">Home</a></li>
           <li><a href="features.html">About Us</a></li>
           <li><a href="pricing.html">Bot Info</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Server Info</a></li>
           <li><a class="active" href="contact.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
