--- a/About.html
+++ b/About.html
@@ -48,11 +48,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="" href="index.html">Home</a></li>
-          <li><a class="active" href="features.html">About Us</a></li>
-          <li><a href="pricing.html">Bot Info</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a class="active " href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="BotInfo.html">Bot Info</a></li>
+          <li><a href="ServerInfo.html">Server Info</a></li>
+          <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
