--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active " href="index.html">Home</a></li>
-          <li><a class="About.html" href="features.html">About</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="BotInfo.html">Bot Info</a></li>
           <li><a href="ServerInfo.html">Server Info</a></li>
           <li><a href="ContactUs.html">Contact Us</a></li>
