--- a/BotInfo.html
+++ b/BotInfo.html
@@ -107,44 +107,39 @@
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center">
               <span>&nbsp;</span>
-              <h3>Basic</h3>
+              <h3>Bot Commands</h3>
               <ul class="list-unstyled">
-                <li>Create up to 5 forms</li>
-                <li>Generate 100 monthly reports</li>
+                <li>Access the full list of bot commands</li>
               </ul>
               <div class="price-cta">
-                <strong class="price">Free</strong>
-                <p><a href="#" class="btn btn-white">Choose Plan</a></p>
+                <!-- <strong class="price">Free</strong> -->
+                <p><a href="#" class="btn btn-white">Listing</a></p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center popular">
-              <span class="popularity">Most Popular</span>
-              <h3>Professional</h3>
+              <!-- <span class="popularity">Most Popular</span> -->
+              <h3>Documentation</h3>
               <ul class="list-unstyled">
-                <li>Create up to 20 forms</li>
-                <li>Generate 2500 monthly reports</li>
-                <li>Manage a team of up to 5 people</li>
+                <li>Take a look at how we created Project HP Bot</li>
               </ul>
               <div class="price-cta">
-                <strong class="price">$9.95/month</strong>
-                <p><a href="#" class="btn btn-white">Choose Plan</a></p>
+                <!-- <strong class="price">$9.95/month</strong> -->
+                <p><a href="#" class="btn btn-white">Link</a></p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center">
-              <span class="popularity">Best Value</span>
-              <h3>Ultimate</h3>
+              <!-- <span class="popularity">Best Value</span>  -->
+              <h3>Server Info</h3>
               <ul class="list-unstyled">
-                <li>Create up to 20 forms</li>
-                <li>Generate 2500 monthly reports</li>
-                <li>Manage a team of up to 5 people</li>
+                <li>Learn More About the Server</li>
               </ul>
               <div class="price-cta">
-                <strong class="price">$199.95/month</strong>
-                <p><a href="#" class="btn btn-white">Choose Plan</a></p>
+                <!-- <strong class="price">$199.95/month</strong> -->
+                <p><a href="ServerInfo.html" class="btn btn-white">Server Info</a></p>
               </div>
             </div>
           </div>
