--- a/About.html
+++ b/About.html
@@ -216,7 +216,7 @@
 
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <p class="copyright">&copy; Copyright SoftLand. All Rights Reserved</p>
+          <p class="copyright">&copy; Copyright Project HP. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
