--- a/ServerInfo.html
+++ b/ServerInfo.html
@@ -81,8 +81,8 @@
           <div class="col-12">
             <div class="row justify-content-center">
               <div class="col-md-7 text-center hero-text">
-                <h1 data-aos="fade-up" data-aos-delay="">Our Services</h1>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h1 data-aos="fade-up" data-aos-delay="">Our Discord Server</h1>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Connecting groups and interests through gamified social interaction.</p>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
 
     </section>
 
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
@@ -175,7 +175,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
   </main><!-- End #main -->
 
@@ -184,25 +184,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <h3>About SoftLand</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam aperiam
-            dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi.</p>
-          <p class="social">
-            <a href="#"><span class="bi bi-twitter"></span></a>
-            <a href="#"><span class="bi bi-facebook"></span></a>
-            <a href="#"><span class="bi bi-instagram"></span></a>
-            <a href="#"><span class="bi bi-linkedin"></span></a>
-          </p>
-        </div>
-        <div class="col-md-7 ms-auto">
-          <div class="row site-section pt-0">
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Navigation</h3>
+          <h3>Navigation</h3>
               <ul class="list-unstyled">
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="BotInfo.html">Bot Info</a></li>
+                <li><a href="ContactUs.html">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-md-4 mb-4 mb-md-0">
@@ -227,7 +214,7 @@
 
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <p class="copyright">&copy; Copyright SoftLand. All Rights Reserved</p>
+          <p class="copyright">&copy; Copyright Project HP. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
