--- a/ContactUs.html
+++ b/ContactUs.html
@@ -163,7 +163,7 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-md-4">
-            <h2 class="section-heading">Review From Our Users</h2>
+            <h2 class="section-heading">Our Team</h2>
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -174,24 +174,22 @@
 
                 <div class="swiper-slide">
                   <div class="review text-center">
-                    <p class="stars">
+                    <!-- <p class="stars">
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill muted"></span>
-                    </p>
-                    <h3>Excellent App!</h3>
+                    </p> -->
+                    <h3>Angela Tseng</h3>
                     <blockquote>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam
-                        aperiam dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi,
-                        provident voluptates consectetur maiores quos.</p>
+                      <p></p>
                     </blockquote>
 
                     <p class="review-user">
                       <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
                       <span class="d-block">
-                        <span class="text-black">Jean Doe</span>, &mdash; App User
+                        <!-- <span class="text-black">Jean Doe</span>, &mdash; App User -->
                       </span>
                     </p>
 
@@ -200,24 +198,22 @@
 
                 <div class="swiper-slide">
                   <div class="review text-center">
-                    <p class="stars">
+                    <!-- <p class="stars">
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill muted"></span>
-                    </p>
-                    <h3>This App is easy to use!</h3>
+                    </p> -->
+                    <h3>Forrest Shooster</h3>
                     <blockquote>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam
-                        aperiam dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi,
-                        provident voluptates consectetur maiores quos.</p>
+                      <p></p>
                     </blockquote>
 
                     <p class="review-user">
                       <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
                       <span class="d-block">
-                        <span class="text-black">Johan Smith</span>, &mdash; App User
+                       <!-- <span class="text-black">Johan Smith</span>, &mdash; App User -->
                       </span>
                     </p>
 
@@ -226,24 +222,46 @@
 
                 <div class="swiper-slide">
                   <div class="review text-center">
-                    <p class="stars">
+                     <!-- <p class="stars">
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill muted"></span>
-                    </p>
-                    <h3>Awesome functionality!</h3>
+                    </p> -->
+                    <h3>Shaheen</h3>
                     <blockquote>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam
-                        aperiam dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi,
-                        provident voluptates consectetur maiores quos.</p>
+                      <p></p>
                     </blockquote>
 
                     <p class="review-user">
                       <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
                       <span class="d-block">
-                        <span class="text-black">Jean Thunberg</span>, &mdash; App User
+                       <!-- <span class="text-black">Jean Thunberg</span>, &mdash; App User -->
+                      </span>
+                    </p>
+
+                  </div>
+                </div><!-- End testimonial item -->
+                
+                 <div class="swiper-slide">
+                  <div class="review text-center">
+                     <!-- <p class="stars">
+                      <span class="bi bi-star-fill"></span>
+                      <span class="bi bi-star-fill"></span>
+                      <span class="bi bi-star-fill"></span>
+                      <span class="bi bi-star-fill"></span>
+                      <span class="bi bi-star-fill muted"></span>
+                    </p> -->
+                    <h3>Omkar</h3>
+                    <blockquote>
+                      <p></p>
+                    </blockquote>
+
+                    <p class="review-user">
+                      <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+                      <span class="d-block">
+                       <!-- <span class="text-black">Jean Thunberg</span>, &mdash; App User -->
                       </span>
                     </p>
 
@@ -258,7 +276,7 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= CTA Section ======= -->
+    <!-- 
     <section class="section cta-section">
       <div class="container">
         <div class="row align-items-center">
@@ -270,7 +288,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End CTA Section -->
+    </section> -->
 
   </main><!-- End #main -->
 
@@ -279,9 +297,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <h3>About Project HP</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam aperiam
-            dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi.</p>
+          <h3>Project HP</h3>
+          <p>Connecting groups and interests through gamified social interaction.</p>
           <p class="social">
             <a href="#"><span class="bi bi-twitter"></span></a>
             <a href="#"><span class="bi bi-facebook"></span></a>
@@ -294,35 +311,20 @@
             <div class="col-md-4 mb-4 mb-md-0">
               <h3>Navigation</h3>
               <ul class="list-unstyled">
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="ServerInfo.html">Server Info</a></li>
+                <li><a href="ContactUs.html">Contact Us</a></li>
               </ul>
             </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Services</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Team-workshops</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Upcoming Downloads</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Coming soon to the App Store 🚀 </a></li>
-                <li><a href="#">Coming soon to the the Play Store 🚀 </a></li>
-              </ul>
-            </div>
+         
           </div>
         </div>
       </div>
 
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <p class="copyright">&copy; Copyright Ｐｒｏｊｅｃｔ ＨＰ. All Rights Reserved</p>
+          <p class="copyright">&copy; Copyright Project HP. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
@@ -330,7 +332,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=SoftLand
           -->
-            Designed by <a href="https://bootstrapmade.com/">OMKAR</a>
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
       </div>
