--- a/ContactUs.html
+++ b/ContactUs.html
@@ -81,7 +81,7 @@
             <div class="row justify-content-center">
               <div class="col-md-7 text-center hero-text">
                 <h1 data-aos="fade-up" data-aos-delay="">Get in touch</h1>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Connecting groups and interests through gamified social interaction.</p>
               </div>
             </div>
           </div>
@@ -96,7 +96,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Contact Form</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+            <p class="mb-0">Feel free to message our moderators on Discord or send us a message here!</p>
           </div>
 
         </div>
@@ -105,16 +105,24 @@
           <div class="col-md-4 ms-auto order-2" data-aos="fade-up">
             <ul class="list-unstyled">
               <li class="mb-3">
-                <strong class="d-block mb-1">Address</strong>
-                <span>203 Mountain Peak, San Francisco, California, USA</span>
+                <strong class="d-block mb-1">The Pitt Challenge</strong>
+                <span>The Pitt Challenge is a virtual hackathon sponsored by the University of Pittsburgh School of Pharmacy and the Clinical and Translational Science Institute (CTSI). Available to students from all walks of life, the hackathon invites everyone to engage in critical conversations regarding healthcare and pharmacy with industry giants and leading researchers. </span>
               </li>
               <li class="mb-3">
-                <strong class="d-block mb-1">Phone</strong>
-                <span>+1 250 1005 104</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Email</strong>
-                <span>PHhelpsalways@gmail.com</span>
+                <strong class="d-block mb-1">Topics available for the 2021 challenge are:</strong>
+                <span>Virtual Experiential Learning
+                    <ul>
+                      <li>Burnout in Healthcare Workers</li>
+                      <li>Remote Patient Interaction</li>
+                      <li>Mobile Health Records</li>
+                      <li>Virtual Medical Simulation</li>
+                      <li>Intelligent Personal Assistants</li>
+                      <li>Improving Health Literacy</li>
+                      <li>Point of Care Testing</li>
+                      <li>Big Data/Machine Learning in Healthcare</li>
+                      <li>Mental Health During Social Isolation</li>
+                  </ul>
+                </span>
               </li>
             </ul>
           </div>
