--- a/BotInfo.html
+++ b/BotInfo.html
@@ -97,9 +97,8 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7 mb-5">
-            <h2 class="section-heading">Project HP Bot</h2>
-            <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data. 
-            </p>
+            <h2 class="section-heading">BOT HP</h2>
+            <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data</p>
           </div>
         </div>
         <div class="row align-items-stretch">
@@ -107,39 +106,37 @@
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center">
               <span>&nbsp;</span>
-              <h3>Bot Commands</h3>
+              <h3>Server Info</h3>
               <ul class="list-unstyled">
-                <li>Access the full list of bot commands</li>
+                <li>General Information</li>
+                <li>The server houses the community where users are prompted to either interact with people with similar interests or start a conversation with someone new. Individuals can form teams based on interests, join existing teams, and participate in mini events that facilitate social interaction.</li>
               </ul>
               <div class="price-cta">
-                <!-- <strong class="price">Free</strong> -->
-                <p><a href="#" class="btn btn-white">Listing</a></p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center popular">
-              <!-- <span class="popularity">Most Popular</span> -->
-              <h3>Documentation</h3>
+              <span class="popularity"></span>
+              <h3>Basic Commands</h3>
               <ul class="list-unstyled">
-                <li>Take a look at how we created Project HP Bot</li>
+                <li>Create up to 20 forms</li>
+                <li>Generate 2500 monthly reports</li>
+                <li>Manage a team of up to 5 people</li>
               </ul>
               <div class="price-cta">
-                <!-- <strong class="price">$9.95/month</strong> -->
-                <p><a href="#" class="btn btn-white">Link</a></p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="pricing h-100 text-center">
-              <!-- <span class="popularity">Best Value</span>  -->
-              <h3>Server Info</h3>
+              <span class="popularity"></span>
+              <h3>Moderators</h3>
               <ul class="list-unstyled">
-                <li>Learn More About the Server</li>
+                <li>Moderation Proccess</li>
+                <li>Moderators are essential to facilitating healthy interactions in a server. The process of becoming a moderator involves filling out a qualifying application, interviewing with a current moderator, and finally completing a short training. More information about our moderators can be accessed through the Discord server. Applications are reviewed regularly. </li>
               </ul>
               <div class="price-cta">
-                <!-- <strong class="price">$199.95/month</strong> -->
-                <p><a href="ServerInfo.html" class="btn btn-white">Server Info</a></p>
               </div>
             </div>
           </div>
