--- a/ContactUs.html
+++ b/ContactUs.html
@@ -191,11 +191,11 @@
                     </p> -->
                     <h3>Angela Tseng</h3>
                     <blockquote>
-                      <p></p>
+                      <p>A senior at the University of Pittsburgh, Angela offers a variety of knowledge with her majors in Information Science, Computational Biology, and a minor in Computer Science.</p>
                     </blockquote>
 
                     <p class="review-user">
-                      <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+                     <!-- <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3"> -->
                       <span class="d-block">
                         <!-- <span class="text-black">Jean Doe</span>, &mdash; App User -->
                       </span>
@@ -215,11 +215,11 @@
                     </p> -->
                     <h3>Forrest Shooster</h3>
                     <blockquote>
-                      <p></p>
+                      <p>Owner of a small business, research contractor, and MD/PhD student, Forrest offers a diverse background which allows us to leverage many types of tools and resources.</p>
                     </blockquote>
 
                     <p class="review-user">
-                      <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+                     <!-- <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-3"> -->
                       <span class="d-block">
                        <!-- <span class="text-black">Johan Smith</span>, &mdash; App User -->
                       </span>
@@ -243,7 +243,7 @@
                     </blockquote>
 
                     <p class="review-user">
-                      <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+                      <!-- <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3"> -->
                       <span class="d-block">
                        <!-- <span class="text-black">Jean Thunberg</span>, &mdash; App User -->
                       </span>
@@ -267,7 +267,7 @@
                     </blockquote>
 
                     <p class="review-user">
-                      <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
+                      <!-- <img src="assets/img/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-3"> -->
                       <span class="d-block">
                        <!-- <span class="text-black">Jean Thunberg</span>, &mdash; App User -->
                       </span>
