--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SoftLand Bootstrap Template - Index</title>
+  <title>Project HP - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -80,8 +80,7 @@
           <div class="row">
             <div class="col-lg-8 text-center text-lg-start">
               <h1 data-aos="fade-right">Tackle Social Isolation with Project HP</h1>
-              <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit.</p>
+              <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Connecting groups and interests through gamified social interaction.</p>
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Server Link</a></p>
             </div>
             <div class="col-lg-4 iphone-wrap">
@@ -103,7 +102,7 @@
 
         <div class="row justify-content-center text-center mb-5">
           <div class="col-md-5" data-aos="fade-up">
-            <h2 class="section-heading">Save your time to using SoftLand</h2>
+            <h2 class="section-heading">Join Our Community to Make Social Interaction Fun and Easy</h2>
           </div>
         </div>
 
@@ -113,8 +112,8 @@
               <div class="wrap-icon icon-1">
                 <i class="bi bi-people"></i>
               </div>
-              <h3 class="mb-3">Explore Your Team</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3 class="mb-3">Bot Info</h3>
+              <p>The main function of the bot is to allow interactions between the users and database of stored data.</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
@@ -122,8 +121,8 @@
               <div class="wrap-icon icon-1">
                 <i class="bi bi-brightness-high"></i>
               </div>
-              <h3 class="mb-3">Digital Whiteboard</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3 class="mb-3">Server Info</h3>
+              <p>The server houses the community where users are prompted to either interact with people with similar interests or start a conversation with someone new. </p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
@@ -131,8 +130,8 @@
               <div class="wrap-icon icon-1">
                 <i class="bi bi-bar-chart"></i>
               </div>
-              <h3 class="mb-3">Design To Development</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3 class="mb-3">Moderator</h3>
+              <p>Moderators are essential to facilitating healthy interactions in a server.</p>
             </div>
           </div>
         </div>
@@ -153,22 +152,22 @@
           <div class="col-md-4">
             <div class="step">
               <span class="number">01</span>
-              <h3>Sign Up</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3>Join the Server</h3>
+              <p>Join the server through the server link provided.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="step">
               <span class="number">02</span>
-              <h3>Create Profile</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3>Fill out your Interests</h3>
+              <p>A form will be available for you to associate interests with your Discord Username.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="step">
               <span class="number">03</span>
-              <h3>Enjoy the app</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, optio.</p>
+              <h3>Start Talking</h3>
+              <p>Events will periodically happen to prompt interactions between members of the community</p>
             </div>
           </div>
         </div>
@@ -180,11 +179,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 me-auto">
-            <h2 class="mb-4">Seamlessly Communicate</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio,
-              laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt
-              dolore mollitia esse natus beatae.</p>
-            <p><a href="#" class="btn btn-primary">Download Now</a></p>
+            <h2 class="mb-4">Recommend Some Resources</h2>
+            <p class="mb-4">Have any resources you would like us to add to our list? Fill out this form and we will take it into consideration!</p>
+            <p><a href="https://forms.gle/oEriTPnaj6iTjLDf9" class="btn btn-primary">Form</a></p>
           </div>
           <div class="col-md-6" data-aos="fade-left">
             <img src="assets/img/undraw_svg_2.svg" alt="Image" class="img-fluid">
@@ -197,11 +194,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 ms-auto order-2">
-            <h2 class="mb-4">Gather Feedback</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur at reprehenderit optio,
-              laudantium eius quod, eum maxime molestiae porro omnis. Dolores aspernatur delectus impedit incidunt
-              dolore mollitia esse natus beatae.</p>
-            <p><a href="#" class="btn btn-primary">Download Now</a></p>
+            <h2 class="mb-4">Feedback</h2>
+            <p class="mb-4">We are always looking to better our community. Let us know if there is any changes you would like to see!</p>
+            <p><a href="https://forms.gle/az4HJp62dnUticH98" class="btn btn-primary">Form</a></p>
           </div>
           <div class="col-md-6" data-aos="fade-right">
             <img src="assets/img/undraw_svg_3.svg" alt="Image" class="img-fluid">
@@ -210,7 +205,7 @@
       </div>
     </section>
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- 
     <section class="section border-top border-bottom">
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
@@ -308,9 +303,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>End Testimonials Section -->
 
-    <!-- ======= CTA Section ======= -->
+    <!-- 
     <section class="section cta-section">
       <div class="container">
         <div class="row align-items-center">
@@ -322,7 +317,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End CTA Section -->
+    </section> -->
 
   </main><!-- End #main -->
 
@@ -331,9 +326,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <h3>About SoftLand</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam aperiam
-            dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi.</p>
+         <h3>Project HP</h3>
+          <p>Connecting groups and interests through gamified social interaction.</p>
           <p class="social">
             <a href="#"><span class="bi bi-twitter"></span></a>
             <a href="#"><span class="bi bi-facebook"></span></a>
@@ -346,35 +340,20 @@
             <div class="col-md-4 mb-4 mb-md-0">
               <h3>Navigation</h3>
               <ul class="list-unstyled">
-                <li><a href="#">About</a></li>
-                
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="ServerInfo.html">Server Info</a></li>
+                <li><a href="ContactUs.html">Contact Us</a></li>
               </ul>
             </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Services</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Downloads</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Get from the App Store</a></li>
-                <li><a href="#">Get from the Play Store</a></li>
-              </ul>
-            </div>
+         
           </div>
         </div>
       </div>
 
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <p class="copyright">&copy; Copyright SoftLand. All Rights Reserved</p>
+          <p class="copyright">&copy; Copyright Project HP. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
