--- a/About.html
+++ b/About.html
@@ -190,24 +190,9 @@
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
+                <li><a href="BotInfo.html">Bot Info</a></li>
                 <li><a href="ServerInfo.html">Server Info</a></li>
                 <li><a href="ContactUs.html">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Services</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Downloads</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Get from the App Store</a></li>
-                <li><a href="#">Get from the Play Store</a></li>
               </ul>
             </div>
           </div>
