--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           </div>
         </div>
       </div>
-    </section>End Testimonials Section -->
+    </section> -->
 
     <!-- 
     <section class="section cta-section">
