--- a/About.html
+++ b/About.html
@@ -107,6 +107,7 @@
         </div>
       </div>
     </section>
+    
 <!--
     <section class="section">
       <div class="container">
@@ -147,13 +148,13 @@
             <p class="mb-4">
               <ul>
                   <li><a href="https://www.nimh.nih.gov/health/find-help" target = "blank">National Institute of Mental Health</a>:
-                    \nIf you or someone you know has a mental illness, is struggling emotionally, or has <a href="https://www.nimh.nih.gov/health/publications/my-mental-health-do-i-need-help" target = "blank">concerns about their mental health</a>, there are ways to get help. Use these resources to find help for you, a friend, or a family member.
+                    If you or someone you know has a mental illness, is struggling emotionally, or has <a href="https://www.nimh.nih.gov/health/publications/my-mental-health-do-i-need-help" target = "blank">concerns about their mental health</a>, there are ways to get help. Use these resources to find help for you, a friend, or a family member.
                   </li>
                   <li><a href="https://www.cdc.gov/mentalhealth/tools-resources/individuals/index.htm" target = "blank">Centers for Disease Control and Prevention</a>:
-                    \nThe CDC recommends these free and confidential resources below to help you or a loved one connect with a skilled, trained mental health professional.
+                    The CDC recommends these free and confidential resources below to help you or a loved one connect with a skilled, trained mental health professional.
                   </li>
                   <li><a href=" https://findtreatment.samhsa.gov" target = "blank">Substance Abuse and Mental Health Services Administration</a>:
-                    \nBehavioral Health Treatment Services Locator is a confidential and anonymous source of information for persons seeking treatment facilities in the United States or U.S. Territories for substance use/addiction and/or mental health problems.
+                    Behavioral Health Treatment Services Locator is a confidential and anonymous source of information for persons seeking treatment facilities in the United States or U.S. Territories for substance use/addiction and/or mental health problems.
                   </li>
               </ul>
             </p>
@@ -164,10 +165,6 @@
         </div>
       </div>
     </section>
-
-
-
-
 
   <!-- ======= Footer ======= -->
   <footer class="footer" role="contentinfo">
