--- a/BotInfo.html
+++ b/BotInfo.html
@@ -97,7 +97,7 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7 mb-5">
-            <h2 class="section-heading">BOT HP</h2>
+            <h2 class="section-heading">Project HP Bot</h2>
             <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data</p>
           </div>
         </div>
@@ -169,22 +169,6 @@
                 <li><a href="About.html">About</a></li>
                 <li><a href="ServerInfo.html">Server Info</a></li>
                 <li><a href="ContactUs.html">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Services</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Downloads</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Get from the App Store</a></li>
-                <li><a href="#">Get from the Play Store</a></li>
               </ul>
             </div>
           </div>
