--- a/ContactUs.html
+++ b/ContactUs.html
@@ -239,7 +239,7 @@
                     </p> -->
                     <h3>Shaheen</h3>
                     <blockquote>
-                      <p></p>
+                      <p>Penn State Great Valley Graduate student pursuing a masters in Information Science.</p>
                     </blockquote>
 
                     <p class="review-user">
@@ -261,9 +261,9 @@
                       <span class="bi bi-star-fill"></span>
                       <span class="bi bi-star-fill muted"></span>
                     </p> -->
-                    <h3>Omkar</h3>
+                    <h3>Omkar K</h3>
                     <blockquote>
-                      <p></p>
+                      <p>A Grade 12 student at the National Public School,Omkar uses his knowledge in Python, MySQL, HTML & CSS to work with various people and make the world a better place.</p>
                     </blockquote>
 
                     <p class="review-user">
