--- a/BotInfo.html
+++ b/BotInfo.html
@@ -120,9 +120,7 @@
               <span class="popularity"></span>
               <h3>Basic Commands</h3>
               <ul class="list-unstyled">
-                <li>Create up to 20 forms</li>
-                <li>Generate 2500 monthly reports</li>
-                <li>Manage a team of up to 5 people</li>
+                <li></li>
               </ul>
               <div class="price-cta">
               </div>
@@ -177,7 +175,7 @@
 
       <div class="row justify-content-center text-center">
         <div class="col-md-7">
-          <p class="copyright">&copy; Copyright SoftLand. All Rights Reserved</p>
+          <p class="copyright">&copy; Copyright Project HP. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
