--- a/BotInfo.html
+++ b/BotInfo.html
@@ -131,7 +131,7 @@
               <span class="popularity"></span>
               <h3>Moderators</h3>
               <ul class="list-unstyled">
-                <li>Moderation Proccess</li>
+                <li>Moderation Process</li>
                 <li>Moderators are essential to facilitating healthy interactions in a server. The process of becoming a moderator involves filling out a qualifying application, interviewing with a current moderator, and finally completing a short training. More information about our moderators can be accessed through the Discord server. Applications are reviewed regularly. </li>
               </ul>
               <div class="price-cta">
