--- a/BotInfo.html
+++ b/BotInfo.html
@@ -98,7 +98,7 @@
         <div class="row justify-content-center text-center">
           <div class="col-md-7 mb-5">
             <h2 class="section-heading">Project HP Bot</h2>
-            <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data</p>
+            <p>The Discord bot is a supplement to the server it resides in. Through it, players and moderators can register, send requests, and perform other actions that enhance their experience in the community. The main function of the bot is to allow interactions between the users and database of stored data.</p>
           </div>
         </div>
         <div class="row align-items-stretch">
