--- a/ServerInfo.html
+++ b/ServerInfo.html
@@ -62,10 +62,11 @@
 
   <main id="main">
 
-    <!-- ======= Blog Section ======= -->
-    <section class="hero-section inner-page">
+    <!-- ======= FeatPricingures Section ======= -->
+    <div class="hero-section inner-page">
       <div class="wave">
-<svg width="1920px" height="265px" viewBox="0 0 1920 265" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+        <svg width="1920px" height="265px" viewBox="0 0 1920 265" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g id="Apple-TV" transform="translate(0.000000, -402.000000)" fill="#FFFFFF">
               <path d="M0,439.134243 C175.04074,464.89273 327.944386,477.771974 458.710937,477.771974 C654.860765,477.771974 870.645295,442.632362 1205.9828,410.192501 C1429.54114,388.565926 1667.54687,411.092417 1920,477.771974 L1920,667 L1017.15166,667 L0,667 L0,439.134243 Z" id="Path"></path>
@@ -80,7 +81,7 @@
           <div class="col-12">
             <div class="row justify-content-center">
               <div class="col-md-7 text-center hero-text">
-                <h1 data-aos="fade-up" data-aos-delay="">Meet Project HP Bot</h1>
+                <h1 data-aos="fade-up" data-aos-delay="">Our Discord Server</h1>
                 <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Connecting groups and interests through gamified social interaction.
                 </p>
               </div>
@@ -96,10 +97,11 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7 mb-5">
-            <h2 class="section-heading">Project HP Bot</h2>
-            <p>TThe server houses the community where users are prompted to either interact with people with similar interests or start a conversation with someone new. Individuals can form teams based on interests, join existing teams, and participate in mini events that facilitate social interaction.</p>
+            <h2 class="section-heading">Project HP Server</h2>
+            <p>The server houses the community where users are prompted to either interact with people with similar interests or start a conversation with someone new. Individuals can form teams based on interests, join existing teams, and participate in mini events that facilitate social interaction.</p>
           </div>
         </div>
+        
       </div>
     </section>
 
@@ -110,28 +112,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <h3>Navigation</h3>
+          <h3>Project HP</h3>
+          <p>Connecting groups and interests through gamified social interaction.</p>
+          <p class="social">
+            <a href="#"><span class="bi bi-twitter"></span></a>
+            <a href="#"><span class="bi bi-facebook"></span></a>
+            <a href="#"><span class="bi bi-instagram"></span></a>
+            <a href="#"><span class="bi bi-linkedin"></span></a>
+          </p>
+        </div>
+        <div class="col-md-7 ms-auto">
+          <div class="row site-section pt-0">
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>Navigation</h3>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="BotInfo.html">Bot Info</a></li>
+                <li><a href="ServerInfo.html">Server Info</a></li>
                 <li><a href="ContactUs.html">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Services</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mb-4 mb-md-0">
-              <h3>Downloads</h3>
-              <ul class="list-unstyled">
-                <li><a href="#">Get from the App Store</a></li>
-                <li><a href="#">Get from the Play Store</a></li>
               </ul>
             </div>
           </div>
