--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@
             <div class="row justify-content-center">
               <div class="col-md-7 text-center hero-text">
                 <h1 data-aos="fade-up" data-aos-delay="">About</h1>
-                <!--<p class="mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Connecting groups and interests through gamified social interaction.</p>
               </div>
             </div>
           </div>
