--- a/ServerInfo.html
+++ b/ServerInfo.html
@@ -99,6 +99,7 @@
           <div class="col-md-7 mb-5">
             <h2 class="section-heading">Project HP Server</h2>
             <p>The server houses the community where users are prompted to either interact with people with similar interests or start a conversation with someone new. Individuals can form teams based on interests, join existing teams, and participate in mini events that facilitate social interaction.</p>
+            <p><a href=# class="btn btn-primary">Server Link</a></p>
           </div>
         </div>
         
