--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SoftLand Bootstrap Template - Contact</title>
+  <title>Project HP - Contact</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
