--- a/ServerInfo.html
+++ b/ServerInfo.html
@@ -103,6 +103,14 @@
           </div>
         </div>
         
+        <div class="row justify-content-center text-center">
+          <div class="col-md-7 mb-5">
+            <h2 class="section-heading">Moderators</h2>
+            <p>Moderators are essential to facilitating healthy interactions in a server. The process of becoming a moderator involves filling out a qualifying application, interviewing with a current moderator, and finally completing a short training. More information about our moderators can be accessed through the Discord server. Applications are reviewed regularly.</p>
+            <p><a href="https://forms.gle/H5D2xMpDekvucHM38" class="btn btn-primary">Moderator Application</a></p>
+          </div>
+        </div>
+        
       </div>
     </section>
 
